docker_and_kuber/kubernetes_in_action/services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia-loadbalancer
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: kubia
