docker_and_kuber/kubernetes_in_action/services/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia
spec:
    sessionAffinity: ClientIP
    ports:
        - name: http
          port: 80
          targetPort: 8080
        - name: https
          port: 443
          targetPort: 8443
    selector:
        app: kubia
