docker_and_kuber/kubernetes_in_action/services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: kubia
spec:
    rules:
        - host: kubia.example.com
          http:
              paths:
                  - path: /kubia
                    backend:
                        serviceName: kubia-nodeport
                        servicePort: 80
                  - path: /foo
                    backend:
                        serviceName: kubia-nodeport
                        servicePort: 80
